manifest/mysql-glpi.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: default
  name: glpi-mysql
  labels:
    app: glpi-mysql

spec:
  replicas: 1
  selector:
    matchLabels:
      app: glpi-mysql
  template:
    metadata:
      labels:
        app: glpi-mysql
    spec:
      containers:
      - name: db
        image: mysql:5.7
        resources:
          requests:
            memory: "550Mi"
            cpu: "300m"
          limits:
            memory: "1700Mi"
            cpu: "1000m"
        ports:
        - name: glpi-mysql
          containerPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: glpi-mysql
  namespace: default
spec:
  selector:
    app: glpi-mysql
  ports:
  - name: glpi-mysql
    port: 3306
    targetPort: glpi-mysql
    protocol: TCP
